# owp_milp_optimization

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: Startseite.rst  conf.py  index.rst  z_Literatur.rst
docs/Dokumentation/: Handbuch.rst  Optimierung.rst  whats_new.rst
docs/Dokumentation/Optimierung/: Allgemein.rst  solph.rst
docs/Erste_Schritte/: Erstes_Energiesystem.rst  Toolaufbau.rst  Tutorials.rst
docs/Galerie/: Anwendungsbeispiele.rst  Veröffentlichungen.rst
docs/Weiterentwicklung/: Anleitung.rst  Inhalt.rst
docs/_static/css/: custom.css
src/owp_milp_optimization/: Home.py  charts.py  helpers.py  model.py
src/owp_milp_optimization/.streamlit/: config.toml
src/owp_milp_optimization/input/: heat_load.csv  param_bound.json  param_opt.json  param_units.json  tooltips.json  unit_inputs.json
src/owp_milp_optimization/locales/: de.json  en.json
src/owp_milp_optimization/pages/: 00_Energiesystem.py  01_Optimierung.py  02_Simulationsergebnisse.py
src/owp_milp_optimization/reporting/: __init__.py  report_generator.py  styling.py  templates.py
src/owp_milp_optimization/solverlogs/: gurobi_log.txt
src/pages/: 00_Energiesystem.py
